@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Tue Jul 05 15:48:30 Paris, Madrid 2005
+ * Sat Aug 06 17:54:15 CEST 2005
  *
  *****************************************************************************/
 
@@ -38,9 +38,9 @@ namespace Mono.Cecil.Binary {
 
 		public void SetDefaultValues ()
 		{
-		CodeManagerTable = DataDirectory.Zero;
-		ExportAddressTableJumps = DataDirectory.Zero;
-		ManagedNativeHeader = DataDirectory.Zero;
+			CodeManagerTable = DataDirectory.Zero;
+			ExportAddressTableJumps = DataDirectory.Zero;
+			ManagedNativeHeader = DataDirectory.Zero;
 		}
 
 		public void Accept (IBinaryVisitor visitor)
