@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Tue Jul 05 15:48:30 Paris, Madrid 2005
+ * Sat Aug 06 18:06:46 CEST 2005
  *
  *****************************************************************************/
 
@@ -34,6 +34,7 @@ namespace Mono.Cecil.Binary {
 			Machine = 0x14c;
 			PointerToSymbolTable = 0;
 			NumberOfSymbols = 0;
+			OptionalHeaderSize = 0xe0;
 		}
 
 		public void Accept (IBinaryVisitor visitor)
