@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Tue Jul 05 15:48:30 Paris, Madrid 2005
+ * Sat Aug 06 18:07:45 CEST 2005
  *
  *****************************************************************************/
 
@@ -59,9 +59,9 @@ namespace Mono.Cecil.Binary {
 
 			public void SetDefaultValues ()
 			{
-			Magic = 0x10b;
-			LMajor = 6;
-			LMinor = 0;
+				Magic = 0x10b;
+				LMajor = 6;
+				LMinor = 0;
 			}
 
 			public void Accept (IBinaryVisitor visitor)
@@ -100,23 +100,24 @@ namespace Mono.Cecil.Binary {
 
 			public void SetDefaultValues ()
 			{
-			ImageBase = 0x400000;
-			SectionAlignment = 0x2000;
-			OSMajor = 4;
-			OSMinor = 0;
-			UserMajor = 0;
-			UserMinor = 0;
-			SubSysMajor = 4;
-			SubSysMinor = 0;
-			Reserved = 0;
-			FileChecksum = 0;
-			DLLFlags = 0;
-			StackReserveSize = 0x100000;
-			StackCommitSize = 0x1000;
-			HeapReserveSize = 0x100000;
-			HeapCommitSize = 0x1000;
-			LoaderFlags = 0;
-			NumberOfDataDir = 0x10;
+				ImageBase = 0x400000;
+				SectionAlignment = 0x2000;
+				OSMajor = 4;
+				OSMinor = 0;
+				UserMajor = 0;
+				UserMinor = 0;
+				SubSysMajor = 4;
+				SubSysMinor = 0;
+				Reserved = 0;
+				HeaderSize = 0x200;
+				FileChecksum = 0;
+				DLLFlags = 0;
+				StackReserveSize = 0x100000;
+				StackCommitSize = 0x1000;
+				HeapReserveSize = 0x100000;
+				HeapCommitSize = 0x1000;
+				LoaderFlags = 0;
+				NumberOfDataDir = 0x10;
 			}
 
 			public void Accept (IBinaryVisitor visitor)
@@ -150,19 +151,20 @@ namespace Mono.Cecil.Binary {
 
 			public void SetDefaultValues ()
 			{
-			ExportTable = DataDirectory.Zero;
-			ImportTable = DataDirectory.Zero;
-			ResourceTable = DataDirectory.Zero;
-			ExceptionTable = DataDirectory.Zero;
-			CertificateTable = DataDirectory.Zero;
-			Debug = DataDirectory.Zero;
-			Copyright = DataDirectory.Zero;
-			GlobalPtr = DataDirectory.Zero;
-			TLSTable = DataDirectory.Zero;
-			LoadConfigTable = DataDirectory.Zero;
-			BoundImport = DataDirectory.Zero;
-			DelayImportDescriptor = DataDirectory.Zero;
-			Reserved = DataDirectory.Zero;
+				ExportTable = DataDirectory.Zero;
+				ResourceTable = DataDirectory.Zero;
+				ExceptionTable = DataDirectory.Zero;
+				CertificateTable = DataDirectory.Zero;
+				Debug = DataDirectory.Zero;
+				Copyright = DataDirectory.Zero;
+				GlobalPtr = DataDirectory.Zero;
+				TLSTable = DataDirectory.Zero;
+				LoadConfigTable = DataDirectory.Zero;
+				BoundImport = DataDirectory.Zero;
+				IAT = new DataDirectory (new RVA (0x2000), 8);
+				DelayImportDescriptor = DataDirectory.Zero;
+				CLIHeader = new DataDirectory (new RVA (0x2008), 0x48);
+				Reserved = DataDirectory.Zero;
 			}
 
 			public void Accept (IBinaryVisitor visitor)
